Fixign spacing issue on components page

--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -571,6 +571,10 @@ hr {
 .padding-stacked {
   margin-bottom: 40px;
 
+  .example {
+    margin-bottom: 16px;
+  }
+
   h3 {
     margin-bottom: 0;
     padding-bottom: 8px;
